# LiveVideoStream

./: .gitignore  CMakeLists.txt  README.md  fmtp.txt
CMakeModules/: FindFFmpeg.cmake  FindLive555.cmake
inc/: CameraUnicastServerMediaSubsession.hpp  Config.hpp  CustomServerMediaSubsession.hpp  Decoder.h  Decoder.hpp  Encoder.hpp  FFmpegDecoder.h  FFmpegDecoder.hpp  H264FramedSource.hpp  LiveCamFramedSource.hpp  LiveCameraRTSPServer.hpp  LiveRTSPServer.hpp  LiveUSBCamFramedSource.hpp  Logger.hpp  TestServerMediaSubsession.hpp  Transcoder.hpp  USBCamFramedSource.hpp  Utils.hpp  logger.h
src/: CameraUnicastServerMediaSubsession.cpp  CustomServerMediaSubsession.cpp  Decoder.cpp  FFmpegDecoder.cpp  H264FramedSource.cpp  LiveCamFramedSource.cpp  LiveUSBCamFramedSource.cpp  Transcoder.cpp  USBCamFramedSource.cpp  Utils.cpp  logger.cpp  main.cpp
